fix: shift dum_venku crop to 30%

--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@
 }
 
 #header-carousel .carousel-item:nth-child(2) img {
-    object-position: center 25%;
+    object-position: center 30%;
 }
 
 #header-carousel .carousel-item:nth-child(3) img {
